--- a/index.html
+++ b/index.html
@@ -7,19 +7,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
-        <caption>Top 10 motorbikes</caption>
-        <thead>
-            <tr>
-                <th scope="col">Brand</th>
-                <th scope="col">Horse Power</th>
-                <th scope="col">Speed</th>
-                <th scope="col">Year</th>
-            </tr>
-        </thead>
+        <table>
+            <caption>Top 10 motorbikes</caption>
+            <thead>
+                <tr>
+                    <th scope="col">Brand</th>
+                    <th scope="col">Horse Power</th>
+                    <th scope="col">Speed</th>
+                    <th scope="col">Year</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <th scope="row">Kawasaki Ninja H2R</th>
+                    <td>263</td>
+                    <td>403 km/h</td>
+                    <td>2020</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">MV Agusta F4 RR 312</th>
+                    <td>232</td>
+                    <td>394 km/h</td>
+                    <td>2018</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">Aprilia RSV4 1100</th>
+                    <td>210</td>
+                    <td>386 km/h</td>
+                    <td>2020</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">PGM 2.0L V8</th>
+                    <td>245</td>
+                    <td>381 km/h</td>
+                    <td>2009</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">BMW S1000RR HP4</th>
+                    <td>221</td>
+                    <td>377 km/h</td>
+                    <td>2020</td>
+                </tr>
+            </tbody>
+        </table>
+
     </div>
 
 </body>
