--- a/index.html
+++ b/index.html
@@ -59,6 +59,41 @@
                     <td>377 km/h</td>
                     <td>2020</td>
                 </tr>
+
+                <tr>
+                    <th scope="row">Suzuki Hayabusa</th>
+                    <td>204</td>
+                    <td>369 km/h</td>
+                    <td>2011</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">Lightning LS</th>
+                    <td>199</td>
+                    <td>365 km/h</td>
+                    <td>2017</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">BMW S1000RR HP4</th>
+                    <td>221</td>
+                    <td>363 km/h</td>
+                    <td>2020</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">MTT 420RR</th>
+                    <td>237</td>
+                    <td>362 km/h</td>
+                    <td>2020</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">Kawasaki ZH2</th>
+                    <td>203</td>
+                    <td>354 km/h</td>
+                    <td>2020</td>
+                </tr>
             </tbody>
         </table>
 
